	  and the dohclient test code has the -n option.
	- Fix python documentation warning on functions.rst inplace_cb_reply.
	- Fix dnstap test to wait for log timer to see if queries are logged.
	- Log ip address when http session recv fails, eg. due to tls fail.
	- Fix to set the tcp handler event toggle flag back to default when
	  the handler structure is reused.

16 October 2020: Wouter
	- Fix that the out of order TCP processing does not limit the
	  number of outstanding queries over a connection.

15 October 2020: George
	- Fix that if there are reply callbacks for the given rcode, those
	  are called per reply and a new message created if that was modified
	  by the call.
	- Pass the comm_reply information to the inplace_cb_reply* functions
	  during the mesh state and update the documentation on that.

15 October 2020: Wouter
	- Merge PR #326 from netblue30: DoH: implement content-length
	  header field
	- DoH content length, simplify code, remove declaration after
	  statement and fix cast warning.

14 October 2020: Wouter
	- Fix for python reply callback to see mesh state reply_list member,
	  it only removes it briefly for the commpoint call so that it does
	  not drop it and attempt to modify the reply list during reply.
	- Fix that if there are on reply callbacks, those are called per
	  reply and a new message created if that was modified by the call.
	- Free up auth zone parse region after use for lookup of host

13 October 2020: Wouter
	- Fix #323: unbound testsuite fails on mock build in systemd-nspawn
	  if systemd support is build.

9 October 2020: Wouter
	- Fix dnstap socket and the chroot not applied properly to the dnstap
	  socket path.
	- Fix warning in libnss compile, nss_buf2dsa is not used without DSA.

8 October 2020: Wouter
	- Tag for 1.12.0 release.
	- Current repo is version 1.12.1 in development.
	- Fix #319: potential memory leak on config failure, in rpz config.

1 October 2020: Wouter